rustdoc: fix file picker marker renders twice on ios

--- a/src/librustdoc/html/static/css/rustdoc.css
+++ b/src/librustdoc/html/static/css/rustdoc.css
@@ -1515,6 +1515,11 @@ details[open].dir-entry > summary::after {
 	content: " ▼";
 }
 
+details.dir-entry > summary::-webkit-details-marker,
+details.dir-entry > summary::marker {
+	display: none;
+}
+
 details.dir-entry > summary {
 	margin: 0 0 0 13px;
 	list-style: none;
